Fixes left selector issue with being hidden behind the posts and menu

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -526,7 +526,8 @@ input.option_menu_list_item {
 	width: 9px;
 	height: 16px;
 	top: 24px;
-	left: 75px;
+/*	left: 75px;*/
+	left: -9px;
 	position: absolute;
 }
 
